// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PortfolioLinks/> Snapshot renders without crashing using mount 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > *:not(:last-child) {
  margin-right: 2em;
}

<PortfolioLinks>
  <styled.div
    orientation="horizontal"
  >
    <div
      className="c0"
      orientation="horizontal"
    >
      <a
        href="#about"
      >
        button.about
      </a>
      <a
        href="#skills"
      >
        button.skills
      </a>
      <a
        href="#experience"
      >
        button.experience
      </a>
      <a
        href="#contact"
      >
        button.contact
      </a>
    </div>
  </styled.div>
</PortfolioLinks>
`;

exports[`<PortfolioLinks/> Snapshot renders without crashing using render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > *:not(:last-child) {
  margin-right: 2em;
}

<div
  class="c0"
  orientation="horizontal"
>
  <a
    href="#about"
  >
    button.about
  </a>
  <a
    href="#skills"
  >
    button.skills
  </a>
  <a
    href="#experience"
  >
    button.experience
  </a>
  <a
    href="#contact"
  >
    button.contact
  </a>
</div>
`;

exports[`<PortfolioLinks/> Snapshot renders without crashing using shallow 1`] = `
<styled.div
  orientation="horizontal"
>
  <a
    href="#about"
  >
    button.about
  </a>
  <a
    href="#skills"
  >
    button.skills
  </a>
  <a
    href="#experience"
  >
    button.experience
  </a>
  <a
    href="#contact"
  >
    button.contact
  </a>
</styled.div>
`;
